--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bundle/vim-scmdiff"]
 	path = bundle/vim-scmdiff
 	url = https://github.com/tomasv/vim-scmdiff.git
+[submodule "bundle/vim-golang"]
+	path = bundle/vim-golang
+	url = git@github.com:jnwhiteh/vim-golang.git
