non ssh golang url

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/tomasv/vim-scmdiff.git
 [submodule "bundle/vim-golang"]
 	path = bundle/vim-golang
-	url = git@github.com:jnwhiteh/vim-golang.git
+	url = https://github.com/jnwhiteh/vim-golang.git
